Fix single pixel gap issue on header

--- a/assets/src/admin/modules/_postbox.scss
+++ b/assets/src/admin/modules/_postbox.scss
@@ -177,8 +177,8 @@
 }
 
 #screen-meta-links + .wpsms-wrap .wpsms-header-banner, .privacy_page .wpsms-header-banner, #screen-meta-links + input[type="hidden"] + .wpsms-wrap .wpsms-header-banner {
-  -webkit-transform: translateY(-31px);
-  transform: translateY(-31px);
+  -webkit-transform: translateY(-34px);
+  transform: translateY(-34px);
   position: relative;
   z-index: -1;
 }
